# falcon

./: .travis.yml  Makefile  README.md  run.sh
ancient/: runDenisova.sh  runDenisovan.sh  runIceman.sh  runMammoth.sh  runNeanderthal.sh  runRCTimes.sh  runRCTimesPlots.sh  runTime.sh
chimp/: runChimp.sh
examples/: example1.sh  example2.sh  example3.sh  example4.sh  example5.sh
gorilla/: runGorilla.sh
human/: runHumanCHM.sh  runHumanGRC.sh
imgs/: logo-new.eps  logo.eps  logo1.eps  logo1q.eps
scripts/: DownloadAllRef.pl  DownloadArchaea.pl  DownloadBacteria.pl  DownloadFungi.pl  DownloadOrg.pl  DownloadRef.pl  Example1.sh  FilterDenisovan.sh  FilterNeanderthal.sh  GetChimpParse.sh  GetGorillaParse.sh  GetHumanCHMParse.sh  GetHumanDeni.sh  GetHumanGRCParse.sh  GetHumanNean.sh  GetHumanNeand.sh  GetTopNames.sh  GetTopNamesDenisovan.sh  GetTopNamesNeanderthal.sh  Install.sh  PATHOGENS  RunHumanCHM.sh  RunHumanDenisovan.sh  RunHumanGRC.sh  RunHumanNeanderthal.sh  downloadBacteria.pl  downloadOrg.pl  downloadViruses.pl  install.sh  run.sh  runHumanCHM.sh  runHumanGRC.sh  runNean.sh
simulation/: runPerm.sh  runSubs.sh  runTime.sh
src/: CMakeLists.txt  Makefile.linux  buffer.c  cmodel.c  cmodel.h  common.c  common.h  defs.h  falcon-eye.c  falcon-filter-visual.c  falcon-filter.c  falcon-inter-visual.c  falcon-inter.c  falcon-map.c  falcon-visual.c  falcon.c  filters.c  filters.h  kmodels.c  kmodels.h  labels.c  labels.h  levels.c  levels.h  mem.c  mem.h  models.c  models.h  msg.c  msg.h  paint.c  paint.h  param.h  parser.c  parser.h  pmodels.c  pmodels.h  segment.c  segment.h  stream.c  (+4 more)
test/: FALCON
